--- a/src/index.html
+++ b/src/index.html
@@ -30,18 +30,25 @@
           type: "tree",
           options: {
             link: {
-              aspect: "arc"
+              aspect: "line"
             },
             node: {
               type: "circle",
-              borderWidth: "2px",
-              label: {
-                width: "100px"
+              borderWidth: 1,
+              size: 4,
+              borderColor: "#333",
+              hoverState: {
+                borderWidth: 2,
+                borderColor: "#000",
+                borderAlpha: 1
               }
+            },
+            "node['cls-expected']": {
+              backgroundColor: "red"
             },
             progression: 0,
             textAttr: "name",
-            valueAttr: "value"
+            value: "value"
           },
           series: chartData
         };
@@ -49,9 +56,9 @@
         zingchart.render({
           id: "myChart",
           data: chartConfig,
-          height: "100%",
-          output: "canvas",
-          autoResize: true
+          height: "auto",
+          output: "canvas"
+          // autoResize: true
         });
       });
     </script>
@@ -70,12 +77,12 @@
         overflow: auto;
         position: relative;
         width: 100%;
-        height: 900px;
+        height: 4000px;
       }
 
       #myChart {
         width: 100%;
-        height: 2600px;
+        height: 6500px;
       }
 
       .zc-ref {
