--- a/src/index.html
+++ b/src/index.html
@@ -1,110 +1,112 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>ZingSoft Demo</title>
-    <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
-    <script src="js/jquery.js"></script>
-    <script>
-      zingchart.MODULESDIR = "https://cdn.zingchart.com/modules/";
-    </script>
-    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/374756/people.js"></script>
-  </head>
 
-  <body>
-    <div id="myChart" class="chart--container">
-      <a class="zc-ref" href="https://www.zingchart.com/">BFS</a>
-    </div>
-    <script>
-      ZC.LICENSE = [
-        "569d52cefae586f634c54f86dc99e6a9",
-        "b55b025e438fa8a98e32482b5f768ff5"
-      ];
-      window.addEventListener("load", async () => {
-        let generatedNodes = await $.getJSON(
-          "/home/gary94746/Documents/BFS/out.json"
-        );
+<head>
+  <meta charset="utf-8" />
+  <title>ZingSoft Demo</title>
+  <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
+  <script src="js/jquery.js"></script>
+  <script>
+    zingchart.MODULESDIR = "https://cdn.zingchart.com/modules/";
+  </script>
+  <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/374756/people.js"></script>
+</head>
 
-        let chartConfig = {
-          type: "tree",
-          options: {
-            link: {
-              aspect: "arc"
-            },
-            node: {
-              type: "circle",
-              borderWidth: 1,
-              size: 4,
-              borderColor: "#333",
-              hoverState: {
-                borderWidth: 2,
-                borderColor: "#000",
-                borderAlpha: 1
-              }
-            },
-            "node[cls-expected]": {
-              type: "square",
-              borderWidth: 2,
-              size: 6,
-              borderColor: "#000",
-              backgroundColor: "black",
-              hoverState: {
-                borderWidth: 1,
-                borderColor: "#000",
-                borderAlpha: 1,
-                backgroundColor: "white"
-              }
-            },
-            link: {
-              lineWidth: 2,
-              lineColor: "grey"
-            },
-            progression: 0,
-            textAttr: "name",
-            value: "value"
+<body>
+  <div id="myChart" class="chart--container">
+    <a class="zc-ref" href="https://www.zingchart.com/">BFS</a>
+  </div>
+  <script>
+    ZC.LICENSE = [
+      "569d52cefae586f634c54f86dc99e6a9",
+      "b55b025e438fa8a98e32482b5f768ff5"
+    ];
+    window.addEventListener("load", async () => {
+      let generatedNodes = await $.getJSON(
+        "/home/gary94746/Documents/BFS/out.json"
+      );
+
+      let chartConfig = {
+        type: "tree",
+        options: {
+          link: {
+            aspect: "arc"
           },
-          series: generatedNodes
-        };
+          node: {
+            type: "circle",
+            borderWidth: 1,
+            size: 4,
+            borderColor: "#333",
+            hoverState: {
+              borderWidth: 2,
+              borderColor: "#000",
+              borderAlpha: 1
+            }
+          },
+          "node[cls-expected]": {
+            type: "square",
+            borderWidth: 2,
+            size: 6,
+            borderColor: "#000",
+            backgroundColor: "black",
+            hoverState: {
+              borderWidth: 1,
+              borderColor: "#000",
+              borderAlpha: 1,
+              backgroundColor: "white"
+            }
+          },
+          link: {
+            lineWidth: 2,
+            lineColor: "grey"
+          },
+          progression: 0,
+          textAttr: "name",
+          value: "value"
+        },
+        series: generatedNodes
+      };
 
-        zingchart.render({
-          id: "myChart",
-          data: chartConfig,
-          height: "auto",
-          output: "canvas"
-          // autoResize: true
-        });
+      zingchart.render({
+        id: "myChart",
+        data: chartConfig,
+        height: "auto",
+        output: "canvas",
+        autoResize: true
       });
-    </script>
+    });
+  </script>
 
-    <style>
-      html,
-      body {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-      }
+  <style>
+    html,
+    body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+    }
 
-      .chart--container {
-        min-height: 150px;
-        overflow: auto;
-        position: relative;
-        width: 100%;
-        height: 4000px;
-      }
+    .chart--container {
+      min-height: 150px;
+      overflow: auto;
+      position: relative;
+      width: 100%;
+      height: 4000px;
+    }
 
-      #myChart {
-        width: 100%;
-        height: 6500px;
-      }
+    #myChart {
+      width: 100%;
+      height: 6500px;
+    }
 
-      .zc-ref {
-        display: none;
-      }
+    .zc-ref {
+      display: none;
+    }
 
-      zing-grid[loading] {
-        height: 2600px;
-      }
-    </style>
-  </body>
+    zing-grid[loading] {
+      height: 2600px;
+    }
+  </style>
+</body>
+
 </html>
